<resources>
    <string name="connection_label">Connection result: </string>
    <string name="session_label">SessionId: </string>
    <string name="sign_label">Sign result: </string>
    <string name="send_label">Transaction result: </string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="dapp_actions_label">Dapp Actions</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="clear_session">Clear Session</string>
    <string name="sign">Sign Message</string>
    <string name="send">Send Transaction</string>
    <string name="switch_chain">Switch Chain</string>
    <string name="add_chain">Add Chain</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDsM6E-cbYvtlgdoKO_79zzlm9G2gErlNE</string>

    <string name="app_name">FrequenC</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mob_no_ph">Enter a valid mobile number.</string>

    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="view_profile">View Profile</string>
    <string name="booking_history">Booking History</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="faq">FAQ</string>
    <string name="error_message">\"Something went wrong!\"</string>
    <string name="saved_event">Saved Events</string>
    <string name="show_text">Mahesh Boy</string>
    <string name="about_me">it would be wonderful to meet someone who appreciates the art and enjoy exploring the vibrant
    culture of the city I value open-mindedness, good communication, and a shared passion for classical music and fine arts</string>
    <string name="wallet">Wallet Setting</string>
    <string name="intro_msg">Welcome to our <font color='#B84ABA'><b>FrequenC</b></font> Event Marketplace! Buy tickets, connect with fellow attendees, and create lasting memories</string>


    <string name="select_image">Select Image</string>

    <string name="username_or_pwd_miss">Username or password is empty</string>
    <string name="sign_up_success">Sign up success!</string>
    <string name="sign_in_success">Sign in success!</string>
    <string name="sign_out_success">Sign out success!</string>
    <string name="send_message_success">Send message success!</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_to_username">Enter to username</string>
    <string name="start_chat">Start chat</string>
    <string name="enter_content">Enter content</string>
    <string name="log_hint">Show log area...</string>
    <string name="has_login_before">An account has been signed in, please sign out first and then sign in</string>
    <string name="sign_in_first">Please sign in first</string>
    <string name="not_find_send_name">Please enter the username who you want to send first!</string>

    <string name="org_name_chats">611066503</string>
    <string name="app_name_chats">1247460</string>
    <string name="camera">Camera\n</string>
    <string name="gallery">Gallery</string>
  
    <!--    <string name="app_key_chats">611066503#1247460</string>-->
    <!--    <string name="app_key_chats">711066503#1245981</string>-->
    <!--    <string name="org_name_chats">711066503</string>-->
    <!--    <string name="app_name_chats">1245981</string>-->
    <!--    <string name="app_key_chats">611066503#1247460</string>-->
    <!--    <string name="org_name_chats">611066503</string>-->
    <!--    <string name="app_name_chats">1247460</string>-->


    <!--    <string name="app_key_chats">611070665#1250094</string>-->
    <!--    <string name="app_key_chats">41879113#1059072</string>-->
    <!--    <string name="app_key_chats">611070665#1250094</string>-->
    <!--    <string name="app_key_chats">611070665#1249732</string>-->
    <!--    <string name="org_name_chats">611070665</string>-->
    <!--    <string name="app_name_chats">1250094</string>-->
    <!--    <string name="app_id_chats">383901d906324a388d95f7e9950c642a</string>-->
    <!--    <string name="app_certificate_chats">148a034119c14c19a9daf790ee869e1a</string>-->
    <!--    <string name="app_token_chats">007eJxTYIj7bTpZeJGbmPHDACVhloM1D/d8NjhSsOBRv/Sfx9r3L65SYDC2MLY0MEyxNDAzNjJJNLawSLE0TTNPtbQ0NUg2MzFKnOJfkdoQyMhQqaPKzMjAysDIwMQA4jMwAACBLxzu</string>-->


</resources>