<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomsheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:clickable="true"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingTop="@dimen/_8sdp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="@dimen/_56sdp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <!-- NOTE: This list should be displayed in a list
       instead of nested layouts -->
    <ImageView
        android:id="@+id/ivClose"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_20sdp"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_popup_close" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_16sdp"
        android:paddingTop="0dp">

        <TextView
            android:id="@+id/tv_select_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_image"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/textViewRegular"
            />

        <View
            android:id="@+id/view_left"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginRight="@dimen/_16sdp"
            android:background="@color/bordercolor"
            app:layout_constraintBottom_toBottomOf="@+id/iv_header"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_header" />

        <ImageView
            android:id="@+id/iv_header"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_marginTop="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_select_image"
            app:layout_constraintRight_toRightOf="@+id/tv_select_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_select_image"
            app:srcCompat="@drawable/ic_divider" />

        <LinearLayout
            android:id="@+id/linlay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:weightSum="2"
            android:layout_marginBottom="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_header">

            <TextView
                android:id="@+id/txtCamera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_camera_2"
                android:gravity="center"
                android:drawablePadding="@dimen/_6sdp"
                android:text="@string/camera"
                android:textColor="@color/black"
                android:textSize="16sp"
                style="@style/textViewRegular"
                />

            <TextView
                android:id="@+id/txtGallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_gallery"
                android:drawablePadding="@dimen/_6sdp"
                android:gravity="center"
                android:text="@string/gallery"
                android:textColor="@color/black"
                android:textSize="16sp"
                style="@style/textViewRegular"
                />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>

