<com.google.android.material.navigation.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_view_dashboard"
    android:layout_width="@dimen/_220sdp"
    android:layout_height="match_parent"
    android:layout_gravity="right"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:overScrollMode="always">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/ll_navDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_icon_color"
                android:gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_60sdp"
                android:orientation="vertical">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ivProfileImage"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_profile" />


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/ivProfileImage"
                    android:layout_centerVertical="true"
                    android:gravity="center"

                    >
                    <TextView
                        android:id="@+id/tvCustName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="User Name"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:textSize="@dimen/_14sdp" />


                    <TextView
                        android:id="@+id/tvCustEmail"
                        android:layout_below="@id/tvCustName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:text="@string/view_profile"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_10sdp" />

                </RelativeLayout>




            </RelativeLayout>



            <RelativeLayout
                android:id="@+id/rlBookingHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_30sdp"
                >

                <ImageView
                    android:id="@+id/ivIcon"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:src="@drawable/ic_book_history"
                    android:layout_centerVertical="true"
                    />

                <TextView
                    android:id="@+id/tvBookingHistory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/ivIcon"
                    android:drawablePadding="@dimen/_10sdp"
                    android:text="@string/booking_history"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    android:layout_toLeftOf="@id/ivIcon2"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/ivIcon2"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:src="@drawable/ic_right_arrow"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    />

            </RelativeLayout>

<!--            <View-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="1dp"-->
<!--                android:layout_marginTop="@dimen/_8sdp"-->
<!--                android:background="?android:attr/listDivider" />-->

<!--            <RelativeLayout-->
<!--                android:id="@+id/rlDashboard"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="@dimen/_10sdp"-->
<!--                android:layout_marginEnd="@dimen/_10sdp"-->
<!--                android:layout_marginTop="@dimen/_15sdp"-->
<!--                >-->

<!--                <ImageView-->
<!--                    android:id="@+id/ivIconD"-->
<!--                    android:layout_width="@dimen/_18sdp"-->
<!--                    android:layout_height="@dimen/_18sdp"-->
<!--                    android:src="@drawable/ic_dashboard"-->
<!--                    android:layout_centerVertical="true"-->
<!--                    />-->

<!--                <TextView-->
<!--                    android:id="@+id/tvDashboard"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_toRightOf="@+id/ivIconD"-->
<!--                    android:drawablePadding="@dimen/_10sdp"-->
<!--                    android:text="@string/dashboard"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:textSize="@dimen/_13sdp"-->
<!--                    android:layout_toLeftOf="@+id/ivIcon2D"-->
<!--                    android:layout_marginLeft="@dimen/_10sdp"-->
<!--                    android:layout_centerVertical="true"-->
<!--                    android:textStyle="bold"-->
<!--                    tools:ignore="RtlSymmetry" />-->

<!--                <ImageView-->
<!--                    android:id="@+id/ivIcon2D"-->
<!--                    android:layout_width="@dimen/_12sdp"-->
<!--                    android:layout_height="@dimen/_12sdp"-->
<!--                    android:src="@drawable/ic_right_arrow"-->
<!--                    android:layout_alignParentRight="true"-->
<!--                    android:layout_centerVertical="true"-->
<!--                    />-->

<!--            </RelativeLayout>-->

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="?android:attr/listDivider" />

            <RelativeLayout
                android:id="@+id/rlSavedEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                >

                <ImageView
                    android:id="@+id/ivIconS"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:src="@drawable/saved"
                    android:layout_centerVertical="true"
                    />

                <TextView
                    android:id="@+id/tvSavedEvents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/ivIconS"
                    android:drawablePadding="@dimen/_10sdp"
                    android:text="@string/saved_event"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    android:layout_toLeftOf="@id/ivIcon2S"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/ivIcon2S"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:src="@drawable/ic_right_arrow"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="?android:attr/listDivider" />

            <RelativeLayout
                android:id="@+id/rlSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                >

                <ImageView
                    android:id="@+id/ivIcon6"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:src="@drawable/ic_settings"
                    android:layout_centerVertical="true"
                    />

                <TextView
                    android:id="@+id/tvSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/ivIcon6"
                    android:drawablePadding="@dimen/_10sdp"
                    android:text="@string/settings"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    android:layout_toLeftOf="@id/ivIcon26"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/ivIcon26"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:src="@drawable/ic_right_arrow"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="?android:attr/listDivider" />

            <RelativeLayout
                android:id="@+id/rlTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                >

                <ImageView
                    android:id="@+id/ivIconT"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:src="@drawable/ic_terms"
                    android:layout_centerVertical="true"
                    />

                <TextView
                    android:id="@+id/tvTerms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/ivIconT"
                    android:drawablePadding="@dimen/_10sdp"
                    android:text="@string/terms_amp_conditions"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    android:layout_toLeftOf="@id/ivIcon2T"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/ivIcon2T"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:src="@drawable/ic_right_arrow"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="?android:attr/listDivider" />

            <RelativeLayout
                android:id="@+id/rlFaq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                >

                <ImageView
                    android:id="@+id/ivIconF"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:src="@drawable/ic_faq"
                    android:layout_centerVertical="true"
                    />

                <TextView
                    android:id="@+id/tvFaq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/ivIconF"
                    android:drawablePadding="@dimen/_10sdp"
                    android:text="@string/faq"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    android:layout_toLeftOf="@+id/ivIcon2F"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/ivIcon2F"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:src="@drawable/ic_right_arrow"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    />

            </RelativeLayout>

            <View
                android:id="@+id/viewLogout"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="?android:attr/listDivider" />

            <RelativeLayout
                android:id="@+id/rlLogout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                >

                <ImageView
                    android:id="@+id/ivIconL"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:src="@drawable/baseline_power_settings_new_24"
                    android:layout_centerVertical="true"
                    />

                <TextView
                    android:id="@+id/tvLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/ivIconL"
                    android:drawablePadding="@dimen/_10sdp"
                    android:text="@string/logout"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    android:layout_toLeftOf="@id/ivIcon2L"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <ImageView
                    android:id="@+id/ivIcon2L"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:src="@drawable/ic_right_arrow"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    />

            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

</com.google.android.material.navigation.NavigationView>
